# Kukii-Home

./: .gitattributes  .gitignore  .npmrc  .prettierignore  .releaserc.json  CODEOWNERS  CONTRIBUTING.md  DESIGN_NOTES.md  LICENSE  README.md  RELEASING.md  eslint.config.mjs  hacs.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  repository.json  tsconfig.base.json
adapters/nvr-agent-dvr/: README.md  pyproject.toml
adapters/nvr-agent-dvr/tests/: test_agent_dvr.py  test_kukiihome_adapter_agent_dvr_import.py  test_sentihome_adapter_agent_dvr_import.py
adapters/nvr-blueiris/: README.md  pyproject.toml
adapters/nvr-blueiris/tests/: test_blueiris_adapter.py  test_kukiihome_adapter_blueiris_import.py  test_sentihome_adapter_blueiris_import.py
adapters/nvr-frigate/: README.md  pyproject.toml
adapters/nvr-frigate/tests/: test_frigate_adapter.py  test_kukiihome_adapter_frigate_import.py  test_sentihome_adapter_frigate_import.py
adapters/nvr-qnap/: README.md  pyproject.toml
adapters/nvr-qnap/tests/: test_kukiihome_adapter_qnap_import.py  test_qnap_skeleton.py  test_sentihome_adapter_qnap_import.py
adapters/nvr-rtsp-direct/: README.md  pyproject.toml
adapters/nvr-rtsp-direct/tests/: test_kukiihome_adapter_rtsp_direct_import.py  test_rtsp_direct_adapter.py  test_sentihome_adapter_rtsp_direct_import.py
adapters/nvr-synology/: README.md  pyproject.toml
adapters/nvr-synology/tests/: test_kukiihome_adapter_synology_import.py  test_sentihome_adapter_synology_import.py  test_synology_skeleton.py
adapters/nvr-unifi/: README.md  pyproject.toml
adapters/nvr-unifi/tests/: test_kukiihome_adapter_unifi_import.py  test_sentihome_adapter_unifi_import.py  test_unifi_skeleton.py
ha-integration/: README.md  pyproject.toml
ha-integration/addon/kukiihome/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
ha-integration/addon/sentihome/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
ha-integration/custom_components/kukiihome/: __init__.py  api_client.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  image.py  manifest.json  number.py  sensor.py  services.yaml  views.py
ha-integration/custom_components/sentihome/: __init__.py  api_client.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  image.py  manifest.json  number.py  sensor.py  services.yaml  strings.json  views.py
services/core/: README.md  pyproject.toml
services/core/tests/: test_adapter_registry.py  test_dispatch.py  test_dispatch_safe_defaults.py  test_kukiihome_core_import.py  test_rules.py  test_sentihome_core_import.py  test_triage.py
services/detector/: README.md  pyproject.toml
services/detector/tests/: test_detector_facade.py  test_kukiihome_detector_import.py  test_sentihome_detector_import.py
services/ha-agent/: README.md  pyproject.toml
services/ha-agent/tests/: test_action_runtime.py  test_action_store.py  test_activity_page.py  test_alert_log_persistence.py  test_alert_page.py  test_areas.py  test_audit_fixes.py  test_base_href_depth.py  test_camera_config_publisher.py  test_camera_loop_lifecycle.py  test_camera_loop_stale_snapshot.py  test_camera_loop_timings.py  test_cameras_page.py  test_commit_guidance.py  test_diagnostics_page.py  test_discovery.py  test_dispatcher.py  test_drawer.py  test_drift_detector.py  test_enricher.py  test_event_store.py  test_graph_integration.py  test_ha_agent.py  test_ha_health.py  test_health_app.py  test_identities.py  test_intent_page.py  test_kukiihome_ha_agent_import.py  test_llm_client.py  test_memory_page.py  test_multiturn_tools.py  test_notifier.py  test_notify_overrides.py  test_overrides.py  test_policies.py  test_preferences.py  test_preprocessor_client.py  test_provenance_store.py  test_push_reply.py  test_reasoning.py  (+9 more)
services/memory/: README.md  pyproject.toml
services/memory/tests/: conftest.py  test_backends_agree.py  test_dynamics.py  test_graph_client.py  test_household_fixture.py  test_kukiihome_memory_import.py  test_models.py  test_scenarios.py  test_sentihome_memory_import.py  test_snapshot_diff.py  test_store.py
services/notify/: README.md  pyproject.toml
services/notify/tests/: test_dispatcher.py  test_kukiihome_notify_import.py  test_sentihome_notify_import.py
services/preprocessor/: README.md  pyproject.toml
services/preprocessor/tests/: test_actor_subscription_integration.py  test_always_embed.py  test_app.py  test_body_id.py  test_body_id_integration.py  test_body_id_pipeline.py  test_camera_config_subscriber.py  test_camera_motion.py  test_ccreid_pipeline.py  test_clip_writer.py  test_detection_integration.py  test_detection_store.py  test_detection_unit.py  test_durable_modalities.py  test_event_recorder.py  test_face.py  test_face_pipeline.py  test_frame_queue.py  test_fusion.py  test_gait_pipeline.py  test_identity_correlation.py  test_identity_router.py  test_identity_store.py  test_keyframes.py  test_kukiihome_preprocessor_import.py  test_markup.py  test_motion.py  test_no_ha_side_imports.py  test_pet.py  test_pet_pipeline.py  test_rolling_buffer.py  test_router_temporal.py  test_rtsp_capture_integration.py  test_rtsp_frame_buffer.py  test_rtsp_supervisor_dynamic.py  test_scheduling.py  test_sentihome_preprocessor_import.py  test_sim.py  test_state.py  test_synthetic_frames.py  (+1 more)
services/vlm-router/: README.md  pyproject.toml
services/vlm-router/tests/: test_breaker.py  test_kukiihome_vlm_router_import.py  test_policy.py  test_response_repair.py  test_router.py  test_sentihome_vlm_router_import.py  test_telemetry.py  test_vlm_health.py
shared/lib-python/: pyproject.toml
shared/lib-python/tests/: test_bus_durations.py  test_degraded.py  test_diagnostics.py  test_generated_schemas.py  test_health_models.py  test_kukiihome_shared_import.py  test_kukiihome_shared_modules.py  test_motion.py  test_preprocessor_contracts.py  test_safe_defaults.py  test_sentihome_shared_import.py  test_sentihome_shared_modules.py  test_timing.py  test_topology.py  test_topology_probes.py  test_watchdog.py  (+1 more)
(+478 files in other folders)
