[project]
name = "kukiihome-ha-integration"
version = "0.1.0"
description = "Home Assistant custom integration for Kukii-Home"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "kukiihome-shared",
    # Note: at runtime, this package is installed into HA which provides its own
    # `homeassistant` package. We don't declare it here to avoid pulling in HA core
    # during dev builds.
    "aiohttp>=3.10.0",
    "voluptuous>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/kukiihome"]
