[project]
name = "kukiihome-adapter-agent-dvr"
version = "0.1.0"
description = "Kukii-Home NVR adapter: agent-dvr"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "kukiihome-shared",
    "pydantic>=2.9.0",
    "httpx>=0.28.0",
]

[project.scripts]
kukiihome-adapter-agent-dvr = "kukiihome_adapter_agent_dvr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kukiihome_adapter_agent_dvr"]
