[project]
name = "kukiihome-adapter-blueiris"
version = "0.1.0"
description = "Kukii-Home NVR adapter: blueiris"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "kukiihome-shared",
    "pydantic>=2.9.0",
    "httpx>=0.28.0",
]

[project.scripts]
kukiihome-adapter-blueiris = "kukiihome_adapter_blueiris.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kukiihome_adapter_blueiris"]
