[project]
name = "kukiihome-adapter-frigate"
version = "0.1.0"
description = "Kukii-Home NVR adapter: frigate"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "kukiihome-shared",
    "pydantic>=2.9.0",
    "httpx>=0.28.0",
]

[project.scripts]
kukiihome-adapter-frigate = "kukiihome_adapter_frigate.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kukiihome_adapter_frigate"]
