[project]
name = "sentihome-adapter-rtsp-direct"
version = "0.1.0"
description = "SentiHome NVR adapter: rtsp-direct"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "sentihome-shared",
    "pydantic>=2.9.0",
    "httpx>=0.28.0",
]

[project.scripts]
sentihome-adapter-rtsp-direct = "sentihome_adapter_rtsp_direct.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentihome_adapter_rtsp_direct"]
