[project]
name = "kukiihome-adapter-rtsp-direct"
version = "0.1.0"
description = "Kukii-Home NVR adapter: rtsp-direct"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "kukiihome-shared",
    "pydantic>=2.9.0",
    "httpx>=0.28.0",
]

[project.scripts]
kukiihome-adapter-rtsp-direct = "kukiihome_adapter_rtsp_direct.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kukiihome_adapter_rtsp_direct"]
