[project]
name = "sentihome-adapter-unifi"
version = "0.1.0"
description = "SentiHome NVR adapter: unifi"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "sentihome-shared",
    "pydantic>=2.9.0",
    "httpx>=0.28.0",
]

[project.scripts]
sentihome-adapter-unifi = "sentihome_adapter_unifi.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentihome_adapter_unifi"]
