[project]
name = "kukiihome-core"
version = "0.1.0"
description = "Kukii-Home orchestration brain: triage, rule engine, action dispatcher"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "kukiihome-shared",
    "kukiihome-memory",
    "kukiihome-adapter-rtsp-direct",
    "kukiihome-adapter-agent-dvr",
    "kukiihome-adapter-frigate",
    "nats-py>=2.9.0",
    "pydantic>=2.9.0",
    "structlog>=24.4.0",
    "anyio>=4.6.0",
    "httpx>=0.28.0",
]

[project.scripts]
kukiihome-core = "kukiihome_core.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kukiihome_core"]
