[project]
name = "sentihome-detector"
version = "0.1.0"
description = "Fast detector models: YOLO, face recognition, re-ID, pose, OCR"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "sentihome-shared",
    "onnxruntime>=1.20.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=2.0.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.20.0",
]

[project.scripts]
sentihome-detector = "sentihome_detector.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentihome_detector"]
