[project]
name = "sentihome-ha-agent"
version = "0.1.0"
description = "Bidirectional Home Assistant MCP server (read + write)"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "sentihome-shared",
    "httpx>=0.28.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "aiohttp>=3.10.0",
    # v0.2.0 in-process camera loop: import MOG2 + cv2 via the preprocessor
    # workspace member. cv2 itself comes in via opencv-python-headless
    # (declared in preprocessor's deps), so we only need to depend on the
    # preprocessor package for the motion module.
    "sentihome-preprocessor",
]

[project.scripts]
sentihome-ha-agent = "sentihome_ha_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentihome_ha_agent"]
