[project]
name = "sentihome-ha-agent"
version = "0.1.0"
description = "Bidirectional Home Assistant MCP server (read + write)"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "sentihome-shared",
    "httpx>=0.28.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "aiohttp>=3.10.0",
    # Epic 10.8.2: in-process camera loop uses MOG2MotionDetector, which
    # lives in sentihome_shared.motion (moved from sentihome_preprocessor
    # so the add-on doesn't drag the entire inference stack — torch,
    # onnxruntime, insightface — onto Yellow). cv2 + numpy come via
    # sentihome-shared's deps.
    # Epic 10.1.6.2 — publish CameraConfigEvents to the preprocessor.
    "nats-py>=2.9.0",
]

[project.scripts]
sentihome-ha-agent = "sentihome_ha_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentihome_ha_agent"]
