[project]
name = "sentihome-memory"
version = "0.1.0"
description = "Memory MCP: SQL + vector DB + object store for sessions, rules, identity, episodic"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "sentihome-shared",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "qdrant-client>=1.12.0",
    "pydantic>=2.9.0",
]

[project.scripts]
sentihome-memory = "sentihome_memory.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentihome_memory"]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
]
