[project]
name = "sentihome-notify"
version = "0.1.0"
description = "Notification dispatcher: push, TTS, in-app, ask flows"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "sentihome-shared",
    "sentihome-ha-agent",
    "pydantic>=2.9.0",
]

[project.scripts]
sentihome-notify = "sentihome_notify.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentihome_notify"]
