[project]
name = "kukiihome-notify"
version = "0.1.0"
description = "Notification dispatcher: push, TTS, in-app, ask flows"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "kukiihome-shared",
    "kukiihome-ha-agent",
    "pydantic>=2.9.0",
]

[project.scripts]
kukiihome-notify = "kukiihome_notify.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kukiihome_notify"]
