[project]
name = "sentihome-preprocessor"
version = "0.1.0"
description = "Motion-gated 24/7 preprocessing for service-mode NVR adapters"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "sentihome-shared",
    "opencv-python-headless>=4.10.0",
    "numpy>=2.0.0",
    "av>=13.0.0",
    "redis>=5.0.0",
    "pydantic>=2.9.0",
]

[project.scripts]
sentihome-preprocessor = "sentihome_preprocessor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentihome_preprocessor"]
