[project]
name = "sentihome-preprocessor"
version = "0.1.0"
description = "Recognition preprocessor for SentiHome — continuous-time inference (Epic 10). Deploys standalone on the inference box; communicates with HA-side services only via NATS + REST."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "sentihome-shared",
    "opencv-python-headless>=4.10.0",
    "numpy>=2.0.0",
    "av>=13.0.0",
    "redis>=5.0.0",
    "pydantic>=2.9.0",
    # Epic 10 service surface. FastAPI exposes the RPC layer; nats-py
    # carries the continuous detection event stream; httpx for any
    # outbound RPCs (e.g. fetching a frame crop from object storage).
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "nats-py>=2.9.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
sentihome-preprocessor = "sentihome_preprocessor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentihome_preprocessor"]
