[project]
name = "sentihome-vlm-router"
version = "0.1.0"
description = "Multi-backend VLM router (local Ollama + cloud fallback) with circuit breaker"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "sentihome-shared",
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
    "ollama>=0.4.0",
]

[project.scripts]
sentihome-vlm-router = "sentihome_vlm_router.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentihome_vlm_router"]
