[project]
name = "sentihome-shared"
version = "0.1.0"
description = "Shared Python library: event bus client, MCP helpers, logging, tracing, schema models"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "nats-py>=2.9.0",
    "pydantic>=2.9.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "anyio>=4.6.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentihome_shared"]
